# Magica

./: .gitmodules  README.md  build.gradle  gradle.properties  make-app-process-jar.ps1  settings.gradle
.github/workflows/: android.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  Application.mk  magica.c  magica.cpp
app/src/main/jni/libcap/: Android.mk  cap_flag.c  libcap.h
app/src/main/jni/libcap/include/sys/: psx_syscall.h
app/src/main/jni/lsplt/: Android.mk  elf_util.cc  elf_util.hpp  logging.hpp  lsplt.cc  syscall.hpp
app/src/main/jni/lsplt/include/: lsplt.hpp
app/src/main/jni/system_properties/: Android.mk  context_node.cpp  contexts_serialized.cpp  contexts_split.cpp  prop_area.cpp  system_properties.cpp  system_property_api.cpp  system_property_set.cpp
app/src/main/jni/system_properties/include/api/: hacks.h  system_properties.h
app/src/main/jni/xhook/: Android.mk  xhook.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/: gradle-daemon-jvm.properties  prefab_bypass.gradle
gradle/wrapper/: gradle-wrapper.properties
libmagica/: build.gradle
libmagica/src/main/jni/: Android.mk  CMakeLists.txt  logging.h  magica.c  magica.cpp
libmagica/src/main/jni/libcap/: cap_alloc.c  cap_file.c  cap_proc.c  cap_text.c
libmagica/src/main/jni/libcap/include/sys/: capability.h
stub/: build.gradle
stub/src/main/java/android/os/: SystemProperties.java
(+23 files in other folders)
